Prueba de commit desde remote desktop

--- a/Laboratorio1/Laboratorio1/Views/Home/Contact.cshtml
+++ b/Laboratorio1/Laboratorio1/Views/Home/Contact.cshtml
@@ -11,3 +11,4 @@
 <h4> Este cambio está en el master y lo quiero mantener en la versión final, lo demás no… </h4>
 
 <p>Testing para pull request</p>
+<p>Prueba de commit desde remote desktop</p>
